--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,9 +1,9 @@
 name: Go
 
-on: [push]
+on: [ push ]
 
 jobs:
-  build:
+  build_test:
 
     runs-on: ubuntu-latest
     strategy:
@@ -16,5 +16,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: ${{ matrix.go-version }}
+      - name: Go Build
+        run: go build -v ./...
       - name: Test with the Go CLI
-        run: go test
+        run: go test -v ./...
